cloding-front/src/App.css
@import url("https://fonts.googleapis.com/css?family=Oxygen:300,400,700");

/* 
orange: #E05915 
purple: #431C5D
white: #E6E9F0
light-blue: #BCCBDE
red: #E01515
*/

html,
body  {
  font-size: 10px;
}

a {
  text-decoration: none;
  color: inherit;
}

h1 {
  font-size: 5rem;
  line-height: 5.5rem;
  font-weight: 700;
}

h2 {
  font-size: 3.5rem;
  font-weight: 700;
}

h4 {
  font-size: 2.5rem;
  line-height: 3rem;
}

h5 {
    font-size: 2rem; 
}

p {
  font-size: 2rem;
  line-height: 3rem;
}

.cursor {
  cursor: pointer;
}

.btn {
  width: 140px;
  height: 42px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px;
  font-size: 2rem;
  color: #ffffff;
  border: 0;
}

.purple {
  background-color: #431c5d;
}

.orange {
  background-color: #e05915;
}

.white {
  background-color: #e6e9f0;
}

.light-blue {
  background-color: #bccbde;
}

.red {
  background-color: #e01515;
}

.padding {
  padding: 65px 80px;
}

.dispay-none {
  display: none;
}

.f700 {
  font-weight: 700;
}

.f400 {
  font-weight: 400;  
}

.pageStructure {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
}

.container {
  margin-top: 5vh;
  width: 960px;
  height: 500px;
  display: flex;
}

.half-container {
  width: 50%;
  display: flex;
  flex-direction: column;
}

